Fix montage on mobile

--- a/site/dev/css/montage.css
+++ b/site/dev/css/montage.css
@@ -25,10 +25,10 @@
     font-weight: 600;
     text-decoration: none;
     color: #fff;
-    background-size: 100% auto;
-    background-position: center;
     background-repeat: no-repeat;
-    padding: 10px;
+    background-size: 100% 100%;
+    /*background-position: center;*/
+    /*padding: 10px;*/
 }
 
 .serentripity-place-image-wide:hover {
